メニュー遷移実装

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
     <title>Poison</title>
   </head>
   <body>
-    <p>hello world</p>
-    <div id="app"></div>
+    <div>
+      <main>
+        <button id="back">戻る</button>
+        <ul>
+        </ul>
+        <div class="info"></div>
+      </main>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
