静的ページへ遷移する処理を追加

--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
   </head>
   <body>
     <div>
-      <main>
-        <button id="back">戻る</button>
-        <ul>
-        </ul>
-        <div class="info"></div>
-      </main>
+      <main></main>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
