2/4レビュー状態。SBとフレッツのみ作ってWBさま展開した

--- a/public/pages/fleteast.html
+++ b/public/pages/fleteast.html
@@ -23,27 +23,23 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="#" class="logo"><strong>SoftBank</strong></a>
+									<a href="#" class="logo"><strong>フレッツ光（転用） ＮＴＴ東日本</strong></a>										
 									<span class="image fit"><img src="/images/workbrainLogo.png" alt=""></span>
 								</header>
 
-							<!-- Banner -->
+								<!-- Banner -->
 								<section id="banner">
 									<div class="content">
 										<ul class="actions">
-											<li><a href="https://my.softbank.jp/" class="button big">My SoftBank</a></li>
+											<li><a href="https://flets.com/app4/input/index/" class="button big">NTT東日本</a></li>
 										</ul>
 										<span class="qrcode">
 										</span>
 										<header>
-											<br />
-											<h3>＜ケータイから＞</h3>
-											<h1><a href="tel:*5533">*5533</a></h1>
 											<br/>
-											<h3>＜一般電話から＞</h3>
-											<h1><a href="tel:08001005533">0800-100-5533</a></h1>
-											<br/>
-											<h2>受付時間　9:00～20:00</h2>
+											<h3>＜電話で取得する場合＞ ＮＴＴ東日本</h3>
+											<h1><a href="tel:0120553104">0120-553-104</a></h1>
+
 										</header>
 										<!-- <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p> -->
 									</div>
@@ -52,32 +48,21 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>MNP予約番号の発行</h2>
+										<h2>追加情報</h2>
 									</header>
 									<div class="features">
 										<article>
 											<div class="content">
-												<h3>発行までの期間</h3>
-												<p> 即日</br>
+												<h3>手順・注意事項・備考</h3>
+												<p> フレッツ光を使っていて、他社光コラボの変える場合は「転用承諾番号」が必要になります。</br>
 
-												<h3>手順</h3>
-												<p> スマホかパソコンから「マイドコモ（My docomo）」にアクセス</br>
-													「dアカウントのIDとパスワード」を入力しログイン</br>
-													少し下に行き「その他のお手続きはこちらから」という青いボタンをクリック</br>
-													「ドコモオンライン手続き」ページに移動後、下部にある「携帯電話番号ポータビリティ予約（MNP）」をクリック</br>
-													MNPに関する注意事項や料金サービスのメリットなど、説明の最後にある「解約お手続き」のボタンをクリック</br>
-													※説明は引き止めのようなものなので、カンタンに読む程度で問題ありません</br>
-													各注意事項に関する説明が3回続くため、それぞれ確認済みのチェックをクリックし、「次へ」を押す</br>
-													※「dポイントについての注意事項」「機種分割お支払金・途中解約金について」「携帯電話番号ポータビリティ予約番号について」</br>
-													「お手続き内容選択」画面に移動するため、必ず「携帯電話番号ポータビリティを予約する」にチェックと「受付確認メールの送信先」をチェックし、次へ</br>
-													確認画面で問題なければ「手続きを完了する」をクリック</br>
-													画面にMNP予約番号と有効期限が表示される</br>
-													受付時間：9:00～21:30 </p>
+													転用番号はＮＴＴ東日本のフレッツ光は『E』から始まる10桁の数字・ＮＴＴ西日本のフレッツ光は『W』から始まる10桁の数字です。</br>
+													転用承諾番号の取得に必要なもの</br>
+													・ひかり電話番号、ご契約者さまの連絡先電話番号、お客さまIDのいづれか一つ</br>
+													・ご契約者様名</br>
+													・フレッツ光ご利用場所住所</br>
+													・フレッツ光ご利用料金のお支払い方法</p>
 
-												<h3>その他・備考</h3>
-												<p> 契約番号からダイアル後「2→2→♯→5→暗証番号」</br>
-													暗証番号忘れた場合は入力せずに待ち続ければオペレーターにつながる</br>
-													番号移行の際は予約番号発行不要</p>
 											</div>
 										</article>
 									</div>
@@ -110,7 +95,7 @@
 			<script src="/assets/js/main.js"></script>
 			<script> 
 				$(function(){
-				  var qrtext = "https://my.softbank.jp/";
+				  var qrtext = "https://www.nttdocomo.co.jp/mydocomo/";
 				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
 				  $(".qrcode").html("");
 				  $(".qrcode").qrcode({text:utf8qrtext}); 
