--- a/public/pages/softbank.html
+++ b/public/pages/softbank.html
@@ -20,10 +20,12 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
+							<br/>
+							<a href="/" class="return_btn_from_html">最初に戻る</a>
 
 							<!-- Header -->
 								<header id="header">
-									<a href="#" class="logo"><strong>SoftBank</strong></a>
+									<H2>SoftBank</H2>
 									<span class="image fit"><img src="/images/workbrainLogo.png" alt=""></span>
 								</header>
 
@@ -91,8 +93,9 @@
 											<div class="content">
 												<h3>別の端末でこちらのページを表示できます</h3>
 												<span class="qrcode_self">
-												</span>		
-												<p> ※今はURLが確定していないので、別なサイト表示中 </p>
+												</span>
+												<p></p>
+												<p> [情報最終更新日] 2022/02/06 </p>
 											</div>
 										</article>
 									</div>
@@ -118,7 +121,7 @@
 			</script>
 			<script> 
 				$(function(){
-				  var qrtext = "https://shopping.yahoo.co.jp/";
+				  var qrtext = "http://43.206.0.112/pages/softbank.html";
 				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
 				  $(".qrcode_self").html("");
 				  $(".qrcode_self").qrcode({text:utf8qrtext}); 
