--- a/public/pages/flets_ntt_east.html
+++ b/public/pages/flets_ntt_east.html
@@ -1,16 +1,13 @@
 
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>かんたん窓口検索</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/assets_style.css" />
+		<link href="//netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
 	</head>
 	<body class="is-preload">
 
@@ -25,22 +22,25 @@
 
 							<!-- Header -->
 								<header id="header">
+									<!-- 1. ヘッダーワード -->
 									<H2>フレッツ光（転用）【NTT東日本】</H2>
-									<span class="image fit"><img src="/images/workbrainLogo.png" alt=""></span>
+									<span class="image fit workbrainLogo_html"><img src="/images/workbrainLogo.png" alt=""></span>
 								</header>
 
 							<!-- Banner -->
 								<section id="banner">
 									<div class="content">
 										<ul class="actions">
-											<li><a href="https://flets.com/app4/input/index/" class="button big">NTT東日本</a></li>
+											<!-- 2. Link URL、ボタン名称 -->
+											<li><a href="https://flets.com/app4/input/index/" class="button big exLink">NTT東日本</a></li>
 										</ul>
 										<span class="qrcode">
 										</span>
+										<!-- 3. 内容 -->
 										<header>
 											<br/>
 											<h3>＜電話で取得する場合＞ ＮＴＴ東日本</h3>
-											<h1><a href="tel:0120553104">0120-553-104</a></h1>
+											<h1><a href="tel:0120140202">0120-140-202</a></h1>
 										</header>
 										<!-- <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p> -->
 									</div>
@@ -48,13 +48,14 @@
 
 							<!-- Section -->
                             <section>
+								<!-- 3. 内容 -->
                                 <header class="major">
-                                    <h2>追加情報</h2>
+                                    <h2>手順・注意事項・備考</h2>
                                 </header>
                                 <div class="features">
                                     <article>
                                         <div class="content">
-                                            <h3>手順・注意事項・備考</h3>
+                                            <!-- <h3>手順・注意事項・備考</h3> -->
                                             <p> フレッツ光を使っていて、他社光コラボの変える場合は「転用承諾番号」が必要になります。</br>
                                                 転用番号はＮＴＴ東日本のフレッツ光は『E』から始まる10桁の数字・ＮＴＴ西日本のフレッツ光は『W』から始まる10桁の数字です。</br>
                                                 転用承諾番号の取得に必要なもの</br>
@@ -62,7 +63,6 @@
                                                 ・ご契約者様名</br>
                                                 ・フレッツ光ご利用場所住所</br>
                                                 ・フレッツ光ご利用料金のお支払い方法</p>
-
                                         </div>
                                     </article>
                                 </div>
@@ -78,6 +78,7 @@
 												<span class="qrcode_self">
 												</span>	
 												<p></p>
+												<!-- 4. 最終更新日 -->
 												<p> [情報最終更新日] 2022/02/06 </p>
 											</div>
 										</article>
@@ -94,6 +95,7 @@
 			<script src="/assets/js/breakpoints.min.js"></script>
 			<script src="/assets/js/util.js"></script>
 			<script src="/assets/js/main.js"></script>
+			<!-- 5.QR code 外部 -->
 			<script> 
 				$(function(){
 				  var qrtext = "https://flets.com/app4/input/index/";
@@ -102,9 +104,10 @@
 				  $(".qrcode").qrcode({text:utf8qrtext}); 
 				});
 			</script>
+			<!-- 6. QR code 自分自身 -->
 			<script> 
 				$(function(){
-				  var qrtext = "http://43.206.0.112/pages/flets_ntt_east.html";
+				  var qrtext = "https://receptionsearch.workbrain.jp/pages/flets_ntt_east.html";
 				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
 				  $(".qrcode_self").html("");
 				  $(".qrcode_self").qrcode({text:utf8qrtext}); 
