--- a/public/pages/flets_search.html
+++ b/public/pages/flets_search.html
@@ -1,20 +1,13 @@
 
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<link href="//netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
-
-
 		<title>かんたん窓口検索</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<link rel="stylesheet" href="/assets/css/assets_style.css" />
+		<link href="//netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
 	</head>
 	<body class="is-preload">
 
@@ -29,31 +22,33 @@
 
 							<!-- Header -->
 								<header id="header">
+									<!-- 1. ヘッダーワード -->
 									<H2>フレッツ光マンション検索</H2>
-									<span class="image fit"><img src="/images/workbrainLogo.png" alt=""></span>
+									<span class="image fit workbrainLogo_html"><img src="/images/workbrainLogo.png" alt=""></span>
 								</header>
 
 							<!-- Banner -->
 								<section id="banner">
 									<div class="content">
 										<ul class="actions">
+											<!-- 2. Link URL、ボタン名称 -->
 											<li><a href="https://hikariweb.ntt-east.co.jp/login.php" class="button big exLink">ひかりWebメンバー専用ページ</a></li>
 										</ul>
 										<span class="qrcode">
 										</span>
-										<!-- <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p> -->
 									</div>
 								</section>
 
 							<!-- Section -->
                             <section>
+								<!-- 3. 内容 -->
                                 <header class="major">
                                     <h2>備考</h2>
                                 </header>
                                 <div class="features">
                                     <article>
                                         <div class="content">
-                                            <h3>備考</h3>
+                                            <!-- <h3>備考</h3> -->
                                             <p> 原則：専任クルーに調べてもらってください。<br/>
                                                 ※ログインID・パスワード必須</p>
                                         </div>
@@ -71,6 +66,7 @@
 												<span class="qrcode_self">
 												</span>	
                                                 <p></p>
+												<!-- 4. 最終更新日 -->
 												<p> [情報最終更新日] 2022/02/06 </p>
 											</div>
 										</article>
@@ -87,6 +83,7 @@
 			<script src="/assets/js/breakpoints.min.js"></script>
 			<script src="/assets/js/util.js"></script>
 			<script src="/assets/js/main.js"></script>
+			<!-- 5.QR code 外部 -->
 			<script> 
 				$(function(){
 				  var qrtext = "https://hikariweb.ntt-east.co.jp/login.php";
@@ -95,9 +92,10 @@
 				  $(".qrcode").qrcode({text:utf8qrtext}); 
 				});
 			</script>
+			<!-- 6. QR code 自分自身 -->
 			<script> 
 				$(function(){
-				  var qrtext = "http://43.206.0.112/pages/flets_search.html";
+				  var qrtext = "https://receptionsearch.workbrain.jp/pages/flets_search.html";
 				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
 				  $(".qrcode_self").html("");
 				  $(".qrcode_self").qrcode({text:utf8qrtext}); 
