--- a/public/pages/softbank.html
+++ b/public/pages/softbank.html
@@ -1,16 +1,13 @@
 
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>かんたん窓口検索</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/assets_style.css" />
+		<link href="//netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
 	</head>
 	<body class="is-preload">
 
@@ -25,18 +22,21 @@
 
 							<!-- Header -->
 								<header id="header">
+									<!-- 1. ヘッダーワード -->
 									<H2>SoftBank</H2>
-									<span class="image fit"><img src="/images/workbrainLogo.png" alt=""></span>
+									<span class="image fit workbrainLogo_html"><img src="/images/workbrainLogo.png" alt=""></span>
 								</header>
 
 							<!-- Banner -->
 								<section id="banner">
 									<div class="content">
 										<ul class="actions">
-											<li><a href="https://my.softbank.jp/" class="button big">My SoftBank</a></li>
+											<!-- 2. Link URL、ボタン名称 -->
+											<li><a href="https://my.softbank.jp/" class="button big exLink">My SoftBank</a></li>
 										</ul>
 										<span class="qrcode">
 										</span>
+										<!-- 3. 内容 -->
 										<header>
 											<br />
 											<h3>＜ケータイから＞</h3>
@@ -47,12 +47,12 @@
 											<br/>
 											<h2>受付時間　9:00～20:00</h2>
 										</header>
-										<!-- <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p> -->
 									</div>
 								</section>
 
 							<!-- Section -->
 								<section>
+									<!-- 3. 内容 -->
 									<header class="major">
 										<h2>MNP予約番号の発行</h2>
 									</header>
@@ -63,22 +63,15 @@
 												<p> 即日</br>
 
 												<h3>手順</h3>
-												<p> スマホかパソコンから「マイドコモ（My docomo）」にアクセス</br>
-													「dアカウントのIDとパスワード」を入力しログイン</br>
-													少し下に行き「その他のお手続きはこちらから」という青いボタンをクリック</br>
-													「ドコモオンライン手続き」ページに移動後、下部にある「携帯電話番号ポータビリティ予約（MNP）」をクリック</br>
-													MNPに関する注意事項や料金サービスのメリットなど、説明の最後にある「解約お手続き」のボタンをクリック</br>
-													※説明は引き止めのようなものなので、カンタンに読む程度で問題ありません</br>
-													各注意事項に関する説明が3回続くため、それぞれ確認済みのチェックをクリックし、「次へ」を押す</br>
-													※「dポイントについての注意事項」「機種分割お支払金・途中解約金について」「携帯電話番号ポータビリティ予約番号について」</br>
-													「お手続き内容選択」画面に移動するため、必ず「携帯電話番号ポータビリティを予約する」にチェックと「受付確認メールの送信先」をチェックし、次へ</br>
-													確認画面で問題なければ「手続きを完了する」をクリック</br>
-													画面にMNP予約番号と有効期限が表示される</br>
-													受付時間：9:00～21:30 </p>
+												<p> 「My SoftBank」にログインする<br>
+													「設定・申込」を選択する<br>
+													「契約者情報の変更」を選択する<br>
+													「番号ポータビリティ(MNP)予約関連手続き」を押す<br>
+													「番号ポータビリティ(MNP)予約(予約番号の発行)」を押す</p>
 
 												<h3>その他・備考</h3>
-												<p> 契約番号からダイアル後「2→2→♯→5→暗証番号」</br>
-													暗証番号忘れた場合は入力せずに待ち続ければオペレーターにつながる</br>
+												<p> 契約番号からダイアル後「2→2→♯→5→暗証番号」<br>
+													暗証番号忘れた場合は入力せずに待ち続ければオペレーターにつながる<br>
 													番号移行の際は予約番号発行不要</p>
 											</div>
 										</article>
@@ -95,6 +88,7 @@
 												<span class="qrcode_self">
 												</span>
 												<p></p>
+												<!-- 4. 最終更新日 -->
 												<p> [情報最終更新日] 2022/02/06 </p>
 											</div>
 										</article>
@@ -111,6 +105,7 @@
 			<script src="/assets/js/breakpoints.min.js"></script>
 			<script src="/assets/js/util.js"></script>
 			<script src="/assets/js/main.js"></script>
+			<!-- 5.QR code 外部 -->
 			<script> 
 				$(function(){
 				  var qrtext = "https://my.softbank.jp/";
@@ -119,9 +114,10 @@
 				  $(".qrcode").qrcode({text:utf8qrtext}); 
 				});
 			</script>
+			<!-- 6. QR code 自分自身 -->
 			<script> 
 				$(function(){
-				  var qrtext = "http://43.206.0.112/pages/softbank.html";
+				  var qrtext = "https://receptionsearch.workbrain.jp/pages/softbank.html";
 				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
 				  $(".qrcode_self").html("");
 				  $(".qrcode_self").qrcode({text:utf8qrtext}); 
