--- a/public/pages/flets_ntt_east.html
+++ b/public/pages/flets_ntt_east.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<link rel="stylesheet" href="/assets/css/assets_style.css" />
 		<link href="//netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
+		<link rel="icon" href="/images/favicon.ico" />
 	</head>
 	<body class="is-preload">
 
