--- a/public/pages/en_hikari.html
+++ b/public/pages/en_hikari.html
@@ -24,7 +24,7 @@
 							<!-- Header -->
 								<header id="header">
 									<!-- 1. ヘッダーワード -->
-									<H2>フレッツ光（転用）【NTT東日本】</H2>
+									<H2>en光</H2>
 									<span class="image fit workbrainLogo_html"><img src="/images/workbrainLogo.png" alt=""></span>
 								</header>
 
@@ -33,16 +33,15 @@
 									<div class="content">
 										<ul class="actions">
 											<!-- 2. Link URL、ボタン名称 -->
-											<li><a href="https://flets.com/app4/input/index/" class="button big exLink">NTT東日本</a></li>
 										</ul>
-										<span class="qrcode">
 										</span>
 										<!-- 3. 内容 -->
 										<header>
 											<br/>
-											<h3>＜電話で取得する場合＞ ＮＴＴ東日本</h3>
-											<h1><a href="tel:0120140202">0120-140-202</a></h1>
-										</header>
+											<h1><a href="tel:0355349997">03-5534-9997</a></h1>
+											<br/>
+											<h2>受付時間：10:00～19:00（年末年始を除く）</h2>
+											</header>
 									</div>
 								</section>
 
@@ -50,19 +49,13 @@
                             <section>
 								<!-- 3. 内容 -->
                                 <header class="major">
-                                    <h2>手順・注意事項・備考</h2>
+                                    <!-- <h2>手順・注意事項・備考</h2> -->
                                 </header>
                                 <div class="features">
                                     <article>
                                         <div class="content">
-                                            <!-- <h3>手順・注意事項・備考</h3> -->
-                                            <p> フレッツ光を使っていて、他社光コラボの変える場合は「転用承諾番号」が必要になります。</br>
-                                                転用番号はＮＴＴ東日本のフレッツ光は『E』から始まる10桁の数字・ＮＴＴ西日本のフレッツ光は『W』から始まる10桁の数字です。</br>
-                                                転用承諾番号の取得に必要なもの</br>
-                                                ・ひかり電話番号、ご契約者さまの連絡先電話番号、お客さまIDのいづれか一つ</br>
-                                                ・ご契約者様名</br>
-                                                ・フレッツ光ご利用場所住所</br>
-                                                ・フレッツ光ご利用料金のお支払い方法</p>
+                                            <h3>手順・注意事項・備考</h3>
+                                            <p> 事業者変更承諾番号を取得したい旨を伝える。</p>
                                         </div>
                                     </article>
                                 </div>
@@ -96,18 +89,10 @@
 			<script src="/assets/js/util.js"></script>
 			<script src="/assets/js/main.js"></script>
 			<!-- 5.QR code 外部 -->
-			<script> 
-				$(function(){
-				  var qrtext = "https://flets.com/app4/input/index/";
-				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
-				  $(".qrcode").html("");
-				  $(".qrcode").qrcode({text:utf8qrtext}); 
-				});
-			</script>
 			<!-- 6. QR code 自分自身 -->
 			<script> 
 				$(function(){
-				  var qrtext = "https://receptionsearch.workbrain.jp/pages/flets_ntt_east.html";
+				  var qrtext = "https://receptionsearch.workbrain.jp/pages/en_hikari.html";
 				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
 				  $(".qrcode_self").html("");
 				  $(".qrcode_self").qrcode({text:utf8qrtext}); 
