--- a/public/pages/kashimo_wimax.html
+++ b/public/pages/kashimo_wimax.html
@@ -24,7 +24,7 @@
 							<!-- Header -->
 								<header id="header">
 									<!-- 1. ヘッダーワード -->
-									<H2>フレッツ光（転用）【NTT東日本】</H2>
+									<H2>カシモWiMAX</H2>
 									<span class="image fit workbrainLogo_html"><img src="/images/workbrainLogo.png" alt=""></span>
 								</header>
 
@@ -33,15 +33,17 @@
 									<div class="content">
 										<ul class="actions">
 											<!-- 2. Link URL、ボタン名称 -->
-											<li><a href="https://flets.com/app4/input/index/" class="button big exLink">NTT東日本</a></li>
+											<li><a href="https://www.ka-shimo.com/contact" class="button big exLink">お問合せ｜カシモWiMAX</a></li>
 										</ul>
 										<span class="qrcode">
 										</span>
 										<!-- 3. 内容 -->
 										<header>
 											<br/>
-											<h3>＜電話で取得する場合＞ ＮＴＴ東日本</h3>
-											<h1><a href="tel:0120140202">0120-140-202</a></h1>
+											<h3>(契約者のみ)</h3>
+											<h1><a href="tel:05031856551">050-3185-6551</a></h1>
+											<br/>
+											<h2>受付時間　10:00～17:00(年末年始除く)</h2>
 										</header>
 									</div>
 								</section>
@@ -56,13 +58,7 @@
                                     <article>
                                         <div class="content">
                                             <!-- <h3>手順・注意事項・備考</h3> -->
-                                            <p> フレッツ光を使っていて、他社光コラボの変える場合は「転用承諾番号」が必要になります。</br>
-                                                転用番号はＮＴＴ東日本のフレッツ光は『E』から始まる10桁の数字・ＮＴＴ西日本のフレッツ光は『W』から始まる10桁の数字です。</br>
-                                                転用承諾番号の取得に必要なもの</br>
-                                                ・ひかり電話番号、ご契約者さまの連絡先電話番号、お客さまIDのいづれか一つ</br>
-                                                ・ご契約者様名</br>
-                                                ・フレッツ光ご利用場所住所</br>
-                                                ・フレッツ光ご利用料金のお支払い方法</p>
+                                            <p> 電話,問い合わせフォーム(メール)にて対応可能</p>
                                         </div>
                                     </article>
                                 </div>
@@ -98,7 +94,7 @@
 			<!-- 5.QR code 外部 -->
 			<script> 
 				$(function(){
-				  var qrtext = "https://flets.com/app4/input/index/";
+				  var qrtext = "https://www.ka-shimo.com/contact";
 				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
 				  $(".qrcode").html("");
 				  $(".qrcode").qrcode({text:utf8qrtext}); 
@@ -107,7 +103,7 @@
 			<!-- 6. QR code 自分自身 -->
 			<script> 
 				$(function(){
-				  var qrtext = "https://receptionsearch.workbrain.jp/pages/flets_ntt_east.html";
+				  var qrtext = "https://receptionsearch.workbrain.jp/pages/kashimo_wimax.html";
 				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
 				  $(".qrcode_self").html("");
 				  $(".qrcode_self").qrcode({text:utf8qrtext}); 
