フォームの文言少し訂正

--- a/public/pages/form.html
+++ b/public/pages/form.html
@@ -36,7 +36,7 @@
 										</span>
 										<header>
 											<h3>販売スタッフの皆さまからのお問合せを受け付けております。</h3>
-											<h3>〜他、メッセージをここに記載〜</h3>
+											<!-- <h3>〜他、メッセージをここに記載〜</h3> -->
 											<br/>
 											<a href="https://docs.google.com/forms/d/1t8eSRJikvlgBDd8ZoJjh_Hqbzdin7UB_ufoOLgcPjvs/edit?usp=sharing" class="button big">問い合わせフォーム入力を開始する</a>
 										</header>
