総合テストのバグ修正

--- a/public/pages/au_hikari_asahinet.html
+++ b/public/pages/au_hikari_asahinet.html
@@ -39,7 +39,7 @@
 										<header>
 											<br/>
 											<h1><a href="tel:0120577108">0120-577-108</a></h1>
-											<h1><a href="tel:0366310856">03-6631-0856</a></h1>
+											<h3>※ダイアル1</h3>
 											<br/>
 											<h2>受付時間 10:00～19:00（平日）</h2>
 											<h2>　　　　 10:00～17:00（土日祝）</h2>
