--- a/public/pages/check_nw_usage_sb_ym.html
+++ b/public/pages/check_nw_usage_sb_ym.html
@@ -33,7 +33,7 @@
 									<div class="content">
 										<ul class="actions">
 											<!-- 2. Link URL、ボタン名称 -->
-											<li><a href="https://my.au.com/cmn/WCV009001/WCE009001.hc" class="button big exLink">確認サイト</a></li>
+											<li><a href="https://ct99.my.softbank.jp/WBF/icv" class="button big exLink">確認サイト</a></li>
 										</ul>
 										<span class="qrcode">
 										</span>
@@ -96,7 +96,7 @@
 			<!-- 5.QR code 外部 -->
 			<script> 
 				$(function(){
-				  var qrtext = "https://my.au.com/cmn/WCV009001/WCE009001.hc";
+				  var qrtext = "https://ct99.my.softbank.jp/WBF/icv";
 				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
 				  $(".qrcode").html("");
 				  $(".qrcode").qrcode({text:utf8qrtext}); 
