--- a/public/pages/excite_hikari.html
+++ b/public/pages/excite_hikari.html
@@ -24,7 +24,7 @@
 							<!-- Header -->
 								<header id="header">
 									<!-- 1. ヘッダーワード -->
-									<H2>エキサイト光 BB.excite光Fit</H2>
+									<H2>エキサイト光<br>BB.excite光Fit</H2>
 									<span class="image fit workbrainLogo_html"><img src="/images/workbrainLogo.png" alt=""></span>
 								</header>
 
