--- a/public/pages/jcom_hikari.html
+++ b/public/pages/jcom_hikari.html
@@ -54,7 +54,8 @@
                                     <article>
                                         <div class="content">
                                             <!-- <h3>手順・注意事項・備考</h3> -->
-                                            <p> まずは、J:COMカスタマーセンターにて解約したい旨を伝えましょう。<br>
+                                            <p> 【ダイアル　: 2-3-1】<br>
+												J:COMカスタマーセンターにて解約したい旨を伝えましょう。<br>
 												メールやネットからの解約受付はできないので注意してください。<br>
 												解約の旨を伝えると、そのまま撤去日の調整をします。</p>
                                         </div>
