--- a/public/pages/jcom_mobile.html
+++ b/public/pages/jcom_mobile.html
@@ -40,6 +40,7 @@
 										<!-- 3. 内容 -->
 										<header>
 											<br />
+											<h3>JCOMモバイル窓口</h3>
 											<h1><a href="tel:0120938362">0120-938-362</a></h1>
 										</header>
 									</div>
