--- a/public/pages/leave_addr_docomo.html
+++ b/public/pages/leave_addr_docomo.html
@@ -64,7 +64,7 @@
 													【docomoのIMAPパスワードの確認方法】<br>
 													<a href="https://www.nttdocomo.co.jp/service/docomo_mail/security/" >https://www.nttdocomo.co.jp/service/docomo_mail/security/</a></li></p>
 
-												<h3>申込条件</h3>
+												<h3>備考</h3>
 												<p> ドコモのアドレスをAndroidで残す場合、<br>
 													今まで使ってたメールアプリが使えなくなるので、使い勝手が少し変わります。<br>
 													登録する前に必ずgmailやoutlookのアプリにドコモアドレスを入れることを確認必須。</p>
@@ -114,7 +114,7 @@
 			<!-- 6. QR code 自分自身 -->
 			<script> 
 				$(function(){
-				  var qrtext = "https://receptionsearch.workbrain.jp/pages/leave_addr_au.html";
+				  var qrtext = "https://receptionsearch.workbrain.jp/pages/leave_addr_docomo.html";
 				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
 				  $(".qrcode_self").html("");
 				  $(".qrcode_self").qrcode({text:utf8qrtext}); 
