--- a/public/pages/ntt_east_check.html
+++ b/public/pages/ntt_east_check.html
@@ -24,36 +24,22 @@
 							<!-- Header -->
 								<header id="header">
 									<!-- 1. ヘッダーワード -->
-									<H2>UQ Wimax　（@nifty）</H2>
+									<H2>NTT東日本リニューアルセンター</H2>
 									<span class="image fit workbrainLogo_html"><img src="/images/workbrainLogo.png" alt=""></span>
 								</header>
-							<!-- Banner -->
-								<section id="banner">
-									<div class="content">
-										<ul class="actions">
-											<!-- 2. Link URL、ボタン名称 -->
-										</ul>
-										</span>
-										<!-- 3. 内容  ver.2-->
-										<header>
-											<br/>
-											<h2>＜契約者＞</h2>
-											<h1><a href="tel:0120502210">0120-50-2210</a></h1>
-											<h3>※フリーダイヤルに接続できない場合は、</h3>
-											<h1><a href="tel:0366253232">03-6625-3232</a></h1>
-											<h2>受付時間 10:00~18:00(解約は17:00までなど内容により異なる)</h2>
-											<br/>
-											<h2>- - - - - - - -</h2>
-											<br/>
-											<h2>＜法人契約＞</h2>
-											<h1><a href="tel:0570033993">0570-03-3993</a></h1>
-											<h2>受付時間 10:00~12:00,13:00~17:00(解約は17:00までなど内容により異なる)</h2>
-											</header>
-									</div>
-								</section>
 
-							<!-- Section -->
-								<!-- 3. 内容 -->
+							<!-- Banner -->
+							<section id="banner">
+								<div class="content">
+									<!-- 3. 内容 -->
+									<header>
+										<br />
+										<h1><a href="tel:0120003312">0120-003-312</a></h1>
+										<br/>
+										<h3>VDSL方式の光ファイバー設備への移管・改善のお問い合わせができます。</h3>
+									</header>
+								</div>
+							</section>
 								<section>
 									<header class="major">
 										<h2>本ページへのリンク</h2>
@@ -64,7 +50,7 @@
 												<h3>別の端末でこちらのページを表示できます</h3>
 												<span class="qrcode_self">
 												</span>	
-												<p></p>
+                                                <p></p>
 												<!-- 4. 最終更新日 -->
 												<p> [情報最終更新日] 2022/02/06 </p>
 											</div>
@@ -86,7 +72,7 @@
 			<!-- 6. QR code 自分自身 -->
 			<script> 
 				$(function(){
-				  var qrtext = "https://receptionsearch.workbrain.jp/pages/uqwimax_nifty.html";
+				  var qrtext = "https://receptionsearch.workbrain.jp/pages/ntt_east_check.html";
 				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
 				  $(".qrcode_self").html("");
 				  $(".qrcode_self").qrcode({text:utf8qrtext}); 
