--- a/public/pages/povo_10.html
+++ b/public/pages/povo_10.html
@@ -33,7 +33,7 @@
 									<div class="content">
 										<ul class="actions">
 											<!-- 2. Link URL、ボタン名称 -->
-											<li><a href="https://my.au.com/rd/mnp?_ga=2.140204339.1495145923.1637132129-1968582158.1628762175" class="button big exLink">au ID ログイン</a></li>
+											<li><a href="https://my.au.com/rd/mnp?_ga=2.140204339.1495145923.1637132129-1968582158.1628762175" class="button big exLink">my au MNPのご予約</a></li>
 										</ul>
 										<span class="qrcode">
 										</span>
