--- a/public/pages/povo_20.html
+++ b/public/pages/povo_20.html
@@ -33,7 +33,7 @@
 									<div class="content">
 										<ul class="actions">
 											<!-- 2. Link URL、ボタン名称 -->
-											<li><a href="https://shop.povo.jp/manage/order?reset=true" class="button big exLink">povo2.0 マイページ</a></li>
+											<li><a href="https://shop.povo.jp/manage/order?reset=true" class="button big exLink">povo マイページ</a></li>
 										</ul>
 										<span class="qrcode">
 										</span>
