--- a/public/pages/simlock_docomo.html
+++ b/public/pages/simlock_docomo.html
@@ -24,7 +24,7 @@
 							<!-- Header -->
 								<header id="header">
 									<!-- 1. ヘッダーワード -->
-									<H2>【Docomo】携帯キャリアメール アドレス残し</H2>
+									<H2>【Docomo】SIMロック解除</H2>
 									<span class="image fit workbrainLogo_html"><img src="/images/workbrainLogo.png" alt=""></span>
 								</header>
 
