--- a/public/pages/tone_mobile.html
+++ b/public/pages/tone_mobile.html
@@ -40,6 +40,7 @@
 										<!-- 3. 内容 -->
 										<header>
 											<br />
+											<h3>TONE　MOBILE窓口</h3>
 											<h1><a href="tel:05073006773">050-7300-6773</a></h1>
 											<br/>
 											<h2>受付時間10:00～19:00</h2>
