--- a/public/pages/yu_mobile.html
+++ b/public/pages/yu_mobile.html
@@ -33,7 +33,7 @@
 									<div class="content">
 										<ul class="actions">
 											<!-- 2. Link URL、ボタン名称 -->
-											<li><a href="https://account.yumobile.jp/mypage" class="button big exLink">Y.U.mobileマイページ</a></li>
+											<li><a href="https://account.yumobile.jp/mypage" class="button big exLink">Y.U.mobile</a></li>
 										</ul>
 										<span class="qrcode">
 										</span>
