--- a/public/pages/simlock_ymobile.html
+++ b/public/pages/simlock_ymobile.html
@@ -33,7 +33,7 @@
 									<div class="content">
 										<ul class="actions">
 											<!-- 2. Link URL、ボタン名称 -->
-											<li><a href="https://www.softbank.jp/mysoftbank" class="button big exLink">Y!mobileログイン</a></li>
+											<li><a href="https://my.ymobile.jp/muc/d/webLink/doSend/MWBWL0167" class="button big exLink">Y!mobileログイン</a></li>
 										</ul>
 										<span class="qrcode">
 										</span>
@@ -96,7 +96,7 @@
 			<!-- 5.QR code 外部 -->
 			<script> 
 				$(function(){
-				  var qrtext = "https://www.softbank.jp/mysoftbank";
+				  var qrtext = "https://my.ymobile.jp/muc/d/webLink/doSend/MWBWL0167";
 				  var utf8qrtext = unescape(encodeURIComponent(qrtext));
 				  $(".qrcode").html("");
 				  $(".qrcode").qrcode({text:utf8qrtext}); 
